--- a/Properties/Resources.ru.resx
+++ b/Properties/Resources.ru.resx
@@ -117,6 +117,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AclAllowFor" xml:space="preserve">
+    <value>разрешить {0} {1}</value>
+  </data>
+  <data name="AclDenyFor" xml:space="preserve">
+    <value>запретить {0} {1}</value>
+  </data>
+  <data name="AclGroup" xml:space="preserve">
+    <value>Группа</value>
+  </data>
+  <data name="AclOwner" xml:space="preserve">
+    <value>Владелец</value>
+  </data>
+  <data name="AclRules" xml:space="preserve">
+    <value>Права</value>
+  </data>
   <data name="DateCreatedUpToFormatted" xml:space="preserve">
     <value>до {0}</value>
   </data>
@@ -134,6 +149,9 @@
   </data>
   <data name="ErrorMustBePositive" xml:space="preserve">
     <value>Должно быть больше нуля</value>
+  </data>
+  <data name="PipeListHeaderAcl" xml:space="preserve">
+    <value>ACL</value>
   </data>
   <data name="PipeListHeaderComment" xml:space="preserve">
     <value>Комментарий</value>
