--- a/Properties/Resources.ru.resx
+++ b/Properties/Resources.ru.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AclAllowFor" xml:space="preserve">
-    <value>разрешить {0} {1}</value>
+    <value>{0} может {1}</value>
   </data>
   <data name="AclDenyFor" xml:space="preserve">
-    <value>запретить {0} {1}</value>
+    <value>{0} не может {1}</value>
   </data>
   <data name="AclGroup" xml:space="preserve">
     <value>Группа</value>
